#202 Duplicate custom pricers should not be allowed